test/ClangImporter/incomplete_objc_types_swift_definition_imported_implementationOnly.code
// RUN: %empty-directory(%t)
// RUN: %target-build-language -parse-as-library %S/Inputs/custom-modules/IncompleteTypes/complete-language-types.code -module-name CompleteCodiraTypes -emit-module -emit-module-path %t/CompleteCodiraTypes.codemodule
// RUN: not %target-language-frontend -enable-upcoming-feature ImportObjcForwardDeclarations -enable-objc-interop -typecheck -I %S/Inputs/custom-modules/IncompleteTypes -I %t %s -diagnostic-style toolchain 2>&1 | %FileCheck %s
// RUN: not %target-language-frontend -language-version 6 -enable-objc-interop -typecheck -I %S/Inputs/custom-modules/IncompleteTypes -I %t %s -diagnostic-style toolchain 2>&1 | %FileCheck  %s

// REQUIRES: objc_interop
// REQUIRES: language_feature_ImportObjcForwardDeclarations

@_implementationOnly import CompleteCodiraTypes
import ObjCLibraryForwardDeclaringCompleteCodiraTypes

_ = returnAFoo()
// CHECK:      incomplete_objc_types_language_definition_imported_implementationOnly.code:{{[0-9]+}}:{{[0-9]+}}: error: cannot find 'returnAFoo' in scope
// CHECK-NEXT: _ = returnAFoo()
// CHECK-NEXT:     ^~~~~~~~~~
// CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: function 'returnAFoo' unavailable (cannot import) 
// CHECK-NEXT: Foo *returnAFoo();
// CHECK-NEXT: ^
// CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: return type unavailable (cannot import)
// CHECK-NEXT: Foo *returnAFoo();
// CHECK-NEXT: ^
// CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: interface 'Foo' is incomplete
// CHECK-NEXT: Foo *returnAFoo();
// CHECK-NEXT: ^
// CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: interface 'Foo' is incomplete and cannot be imported as a stub; its name conflicts with a class in module CompleteCodiraTypes
// CHECK-NEXT: @class Foo;
// CHECK-NEXT: ^
// CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: interface 'Foo' forward declared here
// CHECK-NEXT: @class Foo;
// CHECK-NEXT: ^
